Simplify dex api handler
