# polykube/server/api/v1/dex/dto.go
@@ -1,9 +1,10 @@
 package dex
 
 type Client struct {
-	ID           string   `json:"clientId"`
-	Secret       string   `json:"clientSecret"`
-	RedirectURIs []string `json:"redirectURIs"`
+	ID           string   `json:"id"`
+	Secret       string   `json:"secret,omitempty"`
+	Name         string   `json:"name"`
+	RedirectURIs []string `json:"redirect_uris"`
 }
 
 type ClientList struct {
