# polykube/server/pkg/dex/models.go
@@ -1,7 +1,0 @@
-package dex
-
-type Client struct {
-	ID           string
-	Secret       string
-	RedirectURIs []string
-}
